// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/not-found",
    "search": "",
    "state": undefined,
    "url": "/not-found",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": undefined,
    "url": "/second",
  },
]
`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - history_index 1`] = `1`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": undefined,
        "url": "/not-found",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": undefined,
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "reset",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/not-found",
          "search": "",
          "state": undefined,
          "url": "/not-found",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": undefined,
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 404,
      "type": "NOT_FOUND",
      "url": "/not-found",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": undefined,
        "url": "/not-found",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": undefined,
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "reset",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/not-found",
          "search": "",
          "state": undefined,
          "url": "/not-found",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": undefined,
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 404,
      "type": "NOT_FOUND",
      "url": "/not-found",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`dispatch(reset(entries, index)) - load kind inferred (because only one entry): 1 - title 1`] = `"SECOND"`;
